force-app/main/default/objects/Life_Insurance__c/fields/Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Agent ID</label>
    <referenceTo>Agent__c</referenceTo>
    <relationshipLabel>Life Insurances</relationshipLabel>
    <relationshipName>Life_Insurances</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>