force-app/main/default/objects/Life_Insurance__c/fields/No_of_Terms__c.field-meta.xml
<CustomField>
    <fullName>No_of_Terms__c</fullName>
    <label>No. of Terms</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>