force-app/main/default/objects/Life_Insurance__c/fields/Policy_Holder__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Policy Holder</label>
    <referenceTo>Policy_Holder__c</referenceTo>
    <relationshipLabel>Life Insurances</relationshipLabel>
    <relationshipName>Life_Insurances</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>