force-app/main/default/objects/Life_Insurance__c/fields/Policy_ID__c.field-meta.xml
<CustomField>
    <fullName>Policy_ID__c</fullName>
    <displayFormat>LIID-{0000}</displayFormat>
    <label>Policy ID</label>
    <type>AutoNumber</type>
</CustomField>