force-app/main/default/objects/Life_Insurance__c/fields/Premium_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Premium_Start_Date__c</fullName>
    <label>Premium Start Date</label>
    <type>Date</type>
</CustomField>