force-app/main/default/objects/Life_Insurance__c/fields/Premium_Type__c.field-meta.xml
<CustomField>
    <fullName>Premium_Type__c</fullName>
    <label>Premium Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Half-Yearly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>